# rag-studio

./: .gitignore  CLAUDE.md  CURRENT_STATUS.md  Cargo.toml  MCP_LEGACY_CLEANUP_SUMMARY.md  NEXT_STEPS.md  PHASE_1_1_1_SUMMARY.md  README.md  angular.json  package-lock.json  package.json  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
core/: Cargo.toml  diesel.toml
core/migrations/app_meta/2024-01-01-000000_initial_schema/: down.sql  up.sql
core/migrations/app_meta/2024-01-02-000000_add_models_table/: down.sql  up.sql
core/src/: lib.rs  state.rs
core/src/errors/: core_errors.rs  mod.rs
core/src/models/: common.rs  mod.rs
core/src/modules/: mod.rs
core/src/modules/kb/: errors.rs  mod.rs  models.rs  schema.rs  service.rs
core/src/modules/pipeline/: errors.rs  executor.rs  mod.rs  models.rs  service.rs  templates.rs
core/src/schemas/: mod.rs  schema.rs
core/src/services/: cache.rs  embedding.rs  mod.rs  model.rs  sql.rs  storage.rs  vector.rs
core/src/services/models/: models.rs
core/src/services/schema/: mod.rs  schema.rs
core/src/services/sql/: sql.rs
core/src/services/vector/: mod.rs  vector.rs
core/src/state/: app_state.rs  manager.rs  mod.rs
core/src/utils/: helpers.rs  mod.rs
core/tests/: integration_test.rs  sql_integration.rs  state_manager_integration.rs  vector_integration.rs
docs/: ATOMIC_COMPONENTS.md  ATOMIC_COMPONENTS_REFERENCE.md  COMMAND_REFERENCE.md  COMPONENT_QUICK_REFERENCE.md  CORE_DESIGN.md  DESIGN_TOKENS_API.md  DESIGN_TOKENS_GUIDE.md  DEVELOPMENT_CONVENTIONS.md  DEVELOPMENT_GUIDELINES.md  MVP_PLAN.md  SDD_RAG_Studio.md  SEMANTIC_COMPONENTS.md  SEMANTIC_COMPONENTS_REFERENCE.md  SRS_RAG_Studio.md  rag-studio-radix.html
docs/designs/: CORE_DESIGN.md  SDD_RAG_Studio.md
docs/docs/: ATOMIC_COMPONENTS.md  ATOMIC_COMPONENTS_REFERENCE.md  COMPONENT_QUICK_REFERENCE.md  DESIGN_TOKENS_ANALYSIS.md  DESIGN_TOKENS_API.md  DESIGN_TOKENS_GUIDE.md  SEMANTIC_COMPONENTS.md  SEMANTIC_COMPONENTS_REFERENCE.md  UI_LIBRARY_MIXINS.md
docs/implementation/: Windows_Vector_Integration.md
docs/installation/: NEXT_STEPS.md  Quick_Start.md  README.md  Windows_Build_Setup.md
docs/specs/: 1.1.1_SQLite_Setup_Specification.md  1.1.2_LanceDB_Integration_Specification.md  1.1.3_Storage_Service_Specification.md  1.1.4_Migration_System_Specification.md  1.2.1_AppState_Specification.md  1.2.2_Persistence_Specification.md  1.2.3_Cache_Service_Specification.md  1.2.4_Real-time_Updates_Specification.md  1.3.1_Embedding_Service_Specification.md  1.3.2_PyO3_Integration_Specification.md  1.3.3_AI_Functions_Specification.md  1.3.4_Error_Handling_Specification.md  2.1.1_KB_Schema_Specification.md  2.1.2_Versioning_System_Specification.md  2.1.3_Ingest_Pipeline_Specification.md  2.1.4_Hybrid_Search_Specification.md  2.2.1_Tool_Registry_Specification.md  2.2.2_Security_Specification.md  2.2.3_Communication_Specification.md  2.2.4_Performance_Specification.md  2.3.1_Mandatory_Citations_Specification.md  2.3.2_License_Tracking_Specification.md  2.3.3_Evaluation_Gates_Specification.md  2.3.4_Quality_Assurance_Specification.md  MCP_MODULE_SPEC.md
embedding-worker/: Cargo.toml  build.rs
embedding-worker/python/: embedding_functions.py
embedding-worker/src/: batch.rs  main.rs  model_cache.rs  protocol.rs  python_ai.rs
mcp/: Cargo.toml
mcp/src/: main.rs  protocol.rs  tools.rs  validation.rs
scripts/: clean-production.bat  generate-tokens.js  setup-production.bat
src/: index.html  main.ts  styles.scss
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/python/: rag_functions.py
src-tauri/src/: embedding_commands.rs  kb_commands.rs  lib.rs  main.rs  manager.rs  mcp_server.rs  model_commands.rs  pipeline_commands.rs  python_integration.rs  settings_commands.rs  tools_commands.rs
src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts
src/app/components/: dashboard.component.ts  knowledge-base-manager.component.ts  pipeline-designer.component.ts  settings.component.ts  tools-manager.component.ts
src/app/components/primitives/: index.ts
src/app/components/primitives/rag-alert/: rag-alert.html  rag-alert.ts
src/app/components/primitives/rag-badge/: rag-badge.html  rag-badge.ts
src/app/components/primitives/rag-button/: rag-button.scss  rag-button.ts
src/app/components/primitives/rag-checkbox/: rag-checkbox.ts
src/app/pages/create-kb/: create-kb.html  create-kb.scss  create-kb.ts
src/app/pages/create-pipeline/: create-pipeline.html  create-pipeline.scss  create-pipeline.ts
src/app/pages/dashboard/: dashboard.html  dashboard.scss  dashboard.ts
src/app/pages/flows/: flows.html  flows.scss  flows.spec.ts  flows.ts
src/app/pages/knowledge-bases/: knowledge-bases.html  knowledge-bases.scss  knowledge-bases.spec.ts  knowledge-bases.ts
src/app/pages/models/: models.html  models.scss  models.spec.ts  models.ts
src/app/pages/pipelines/: pipelines.html  pipelines.scss  pipelines.spec.ts  pipelines.ts
src/app/pages/settings/: settings.html  settings.scss  settings.ts
src/app/pages/tools/: tools.html  tools.scss  tools.spec.ts  tools.ts
src/app/shared/components/: README.md  index.ts
src/app/shared/layout/: index.ts
src/app/shared/models/: flow.model.ts  pipeline.model.ts
src/app/shared/services/: flows.ts  knowledge-bases.service.ts  mock-knowledge-bases.spec.ts  mock-knowledge-bases.ts  mock-knowledge-bases.ts.backup  mock-tools.service.ts
src/app/shared/store/: app.store.ts  knowledge-bases.store.ts  models.store.ts  pipelines.store.ts  settings.store.ts  tools.store.ts
src/app/shared/styles/: _project-mixins.scss  animations.scss  index.scss
src/app/shared/tokens/: README.md  _css-tokens.generated.scss  _design-tokens.generated.scss  design-token-css.ts  design-token-generator.ts  design-tokens.service.ts  design-tokens.ts  index.ts  provider.ts  types.ts
src/app/shared/types/: index.ts  knowledge-base.types.ts  model.types.ts  tool.types.ts
src/app/shared/utils/: knowledge-base.utils.ts
src/styles/: _design-tokens.scss
(+306 files in other folders)
