[workspace]
members = ["src-tauri", "core", "mcp"]
resolver = "2"

[workspace.dependencies]
diesel = { version = "2.1", features = ["sqlite", "chrono", "r2d2"] }
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
diesel_migrations = "2.1"
chrono = { version = "=0.4.39", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "5.5"
notify = "6.1"
ring = "0.17"
# Vector Database Integration dependencies
async-trait = "0.1"
tower = "0.4"
# MCP server dependencies
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
jsonschema = "0.17"
# Tantivy and LanceDB will be added when dependency conflicts are resolved
# tantivy = "0.20"
# lancedb = "0.9"