[package]
name = "rag-core"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { workspace = true }
diesel_migrations = { workspace = true }
libsqlite3-sys = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
notify = { workspace = true }
ring = { workspace = true }
# Additional dependencies specific to core
async-trait = { workspace = true }
tower = { workspace = true }
# Vector Database Integration dependencies
tantivy = "0.22"
# Try much older LanceDB version
lancedb = { version = "0.18", default-features = false }
# Use compatible Arrow version
arrow = { version = "50.0" }
arrow-array = { version = "50.0" }
# For async streams
futures = "0.3"
# For embedding model integration
hf-hub = { version = "0.3", optional = true }
# For utilities
regex = "1.0"
# For StorageService
sha2 = "0.10"
zip = "0.6"
# For pipeline templates
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"